tests2/new_site/new-site.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: new-site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: new-site
  template:
    metadata:
      labels:
        app: new-site
    spec:
      containers:
        - name: new-site
          image: website_cities:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: new-site
spec:
  selector:
    app: new-site
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
