tests2/new_site/new-site-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: new-site-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - new-site.com
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: new-site
spec:
  hosts:
  - new-site.com
  gateways:
  - new-site-gateway
  http:
  - route:
    - destination:
        host: new-site
        port:
          number: 80
